<resources>
    <string name="app_name">ToDoApp</string>
    <string name="settings_title">Настройки</string>
    <string name="cancel">Отменить</string>
    <string name="theme">Тема</string>
    <string name="light">Всегда светлая</string>
    <string name="dark">Всегда тёмная</string>
    <string name="system">Как в системе</string>
    <string name="edit_hint">Что надо слелать…</string>
    <string name="no">Нет</string>
    <string name="low">Низкий</string>
    <string name="close">Закрыть</string>
    <string name="high"><font color="@color/red">!! Высокий</font></string>
    <string name="fab_description">Создать заметку</string>
    <string name="settings_icon_description">Настройки</string>
    <string name="info_icon_description">О приложении</string>
    <string name="eye_icon_description">Включена видимость</string>
    <string name="eye_off_icon_description">Выключена видимость</string>
    <string name="urgent_icon_description">Высокая важность</string>
    <string name="low_icon_description">Низкая важность</string>
    <string name="info_item_icon_description">Информация о деле</string>
    <string name="importance">Важность</string>
    <string name="completed">Выполнено - </string>
    <string name="new_block">Новое</string>
    <string name="cross">cross</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="importance_title">Важность</string>
    <string name="dedline_title">Сделать до</string>
    <string name="delete">Удалиить</string>
    <string name="exaple_vh">1</string>
    <string name="date_example">Дата</string>
    <string name="my_todos">Мои дела</string>
    <string name="garbage">Мусорная урна</string>
    <string name="action_label">Изменить выполнение дела</string>
</resources>