<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbar"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/cross"
            android:contentDescription="@string/cross"
            android:layout_margin="20dp"
            android:src="@drawable/close"
            app:tint="@color/primaryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:id="@+id/save"
            android:layout_gravity="center|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginEnd="16dp"
            style="@style/textFamily.LargeTitle.title.Button"
            android:text="@string/save"/>
        
    </Toolbar>
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <EditText
                android:id="@+id/todo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/edit_hint"
                android:padding="16dp"
                android:background="@drawable/edit_bg"
                android:minLines="5"
                android:autofillHints="" />

            <TextView
                android:id="@+id/importance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Body"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/importance_title"/>

            <TextView
                android:id="@+id/importance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Subhead"
                android:textColor="@color/tertiaryLabel"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/no_example"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/separator"/>

            <FrameLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/deadline_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Body"
                    android:text="@string/dedline_title"/>

                <TextView
                    android:id="@+id/deadline_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Subhead"
                    android:visibility="gone"
                    android:layout_gravity="bottom"
                    android:textColor="@color/blue"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"/>

            </FrameLayout>

            <View
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/separator"/>

            <LinearLayout
                android:id="@+id/delete_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/delete_img"
                    android:src="@drawable/delete"
                    app:tint="@color/disable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/delete_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Body"
                    android:textColor="@color/disable"
                    android:text="@string/delete"/>

            </LinearLayout>
            
        </LinearLayout>
        
    </androidx.core.widget.NestedScrollView>

</LinearLayout>