<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:paddingTop="14dp"
    android:paddingBottom="14dp"
    android:layout_height="wrap_content">

    <ToggleButton
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:textOn=""
        android:textOff=""
        style="@style/ToggleButtonNoBorder"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="top"
       android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/importance_img"
                android:contentDescription="@string/importance"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:layout_gravity="top|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/todoItem"
                android:layout_width="match_parent"
                android:gravity="start|center_vertical"
                android:layout_gravity="center"
                android:textColor="@color/primaryLabel"
                style="@style/Body"
                android:paddingTop="3dp"
                android:text="@string/exaple_vh"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Subhead"
            android:visibility="visible"
            android:textColor="@color/tertiaryLabel"
            android:text="@string/date_example"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/info_btn"
        android:contentDescription="add"
        android:background="@drawable/info_outline"
        android:backgroundTint="@color/tertiaryLabel"
        android:layout_marginEnd="16dp"
        android:layout_gravity="top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>